added overview video

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
   <!-- sample video section -->
   <section class="video">
     <div class="container">
-      <a class="center popup-youtube" href="https://youtube.com/shorts/uF2r5HLmMHU?feature=share">
-        <i class="fas fa-play"></i>
+      <!-- <a class="center popup-youtube" href="https://youtube.com/shorts/uF2r5HLmMHU?feature=share"> -->
+        <video controls src="overview.mp4" width="500"></video>
       </a>
       <h2 class="wow animate__animated animate__fadeInUp animate__slow">Watch Library Video</h2>
       <p class="wow animate__animated animate__fadeInUp animate__slow">Experience the comfort and convenience of these
@@ -563,21 +563,6 @@
   <script src="resources/WOW-master/dist/wow.js"></script>
   <!-- custom js -->
   <script src="js/script.js"></script>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-  <script>
-    function sendEmail()
-    Email.send({
-      Host: "smtp.elasticemail.com",
-      Username: "gauravshweta1017@gmail.com",
-      Password: "Gaurav@123",
-      To: 'gauravmyntra097@gmail.com',
-      From: document.getElementById("email").value,
-      Subject: "New contact Enquiry",
-      Body: "And this is the body"
-    }).then(
-      message => alert(message)
-    );
-  </script>
 </body>
 
 </html>
