--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
         <div class="navbar-collapse">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#intro" class="nav-link">intro</a>
+              <a href="#intro" class="nav-link">Intro</a>
             </li>
             <li class="nav-item">
-              <a href="#feature" class="nav-link">feature</a>
+              <a href="#feature" class="nav-link">Features</a>
+            </li>
+            <li class="nav-item">
+              <a href="#video" class="nav-link">Video</a>
+            </li>
+            <li class="nav-item">
+              <a href="#faq" class="nav-link">FAQ</a>
             </li>
             <!-- <li class="nav-item">
               <a href="#team" class="nav-link">team</a>
@@ -64,7 +70,7 @@
               <a href="#testimonial" class="nav-link">testimonial</a>
             </li> -->
             <li class="nav-item">
-              <a href="#contact" class="nav-link">contact</a>
+              <a href="#contact" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -211,10 +217,10 @@
   <!-- end of features section -->
 
   <!-- sample video section -->
-  <section class="video">
+  <section class="video" id="video">
     <div class="container">
       <!-- <a class="center popup-youtube" href="https://youtube.com/shorts/uF2r5HLmMHU?feature=share"> -->
-        <video controls src="overview.mp4" width="500"></video>
+        <video style="display: block; margin: 1em auto; width: 80%; height: calc(.5625*80vw);" controls src="overview.mp4" width="500"></video>
       </a>
       <h2 class="wow animate__animated animate__fadeInUp animate__slow">Watch Library Video</h2>
       <p class="wow animate__animated animate__fadeInUp animate__slow">Experience the comfort and convenience of these
@@ -343,7 +349,7 @@
   <!-- end of team section
     
     <!-- faq section -->
-  <section class="faq">
+  <section class="faq" id="faq">
     <div class="container">
       <div class="title">
         <h2 class="wow animate__animated animate__bounceIn animate__slow">Have Any Questions?</h2>
