just dial info added

--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
         <a href="#" class="center">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="center">
-          <i class="fab fa-instagram"></i>
+        <a href="https://jsdl.in/DT-99Q7W5WI15I" target="_blank" class="center">
+          <i class="fa-solid fa-phone-volume"></i>
         </a>
         <a href="#" class="center">
           <i class="fab fa-linkedin"></i>
