updated some info

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="feature-item">
             <span><i class="fa-solid fa-glass-water fa-beat-fade"></i></span>
             <div>
-              <h3>Hot Cold Noraml RO Water</h3>
+              <h3>Hot Cold Normal RO Water</h3>
               <p class="text">Quench your thirst with cold, hot, or normal RO water
                 available on-site, allowing you to stay hydrated throughout your visit.</p>
             </div>
@@ -359,7 +359,7 @@
       <div class="row wow animate__animated animate__fadeInUp animate__slow">
         <div class="faq-item">
           <div class="faq-head">
-            <h3>Where Siddharth Library Situated?</h3>
+            <h3>Where Siddharth Library Located?</h3>
             <span><i class="fas fa-plus"></i></span>
           </div>
           <div class="faq-content">
@@ -534,20 +534,20 @@
     <div class="container">
       <p class="text">Copyright &copy; Siddharth Library | All Rights Reserved (Designed and created by Gaurav Singh)</p>
       <div class="footer-links">
-        <a href="#" class="center">
-          <i class="fab fa-facebook-f"></i>
+        <a href="https://goo.gl/maps/KSLW8Zap44RfLq736" target="_blank"  class="center">
+          <i class="fab fa-google"></i>
         </a>
         <a href="https://jsdl.in/DT-99Q7W5WI15I" target="_blank" class="center">
           <i class="fa-solid fa-phone-volume"></i>
+        </a>
+        <a href="#" class="center">
+          <i class="fab fa-facebook-f"></i>
         </a>
         <a href="#" class="center">
           <i class="fab fa-linkedin"></i>
         </a>
         <a href="#" class="center">
           <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://goo.gl/maps/KSLW8Zap44RfLq736" target="_blank"  class="center">
-          <i class="fab fa-google"></i>
         </a>
       </div>
     </div>
