--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="container">
       <div class="row">
         <div class="feature-left wow animate__animated animate__fadeInUp animate__slow">
-          <img src="assets/sid.png" alt="">
+          <img style="display: block; margin-left: auto; margin-right: auto; text-align: center; width: 100%;" src="assets/sid.png" alt="">
         </div>
         <div class="feature-right wow animate__animated animate__fadeInUp animate__slow">
           <div class="title">
@@ -230,7 +230,7 @@
   </section>
   <!-- end of sample video section -->
 
-  <!-- team section --> -->
+  <!-- team section -->
   <!-- <section class = "team" id = "team">
       <div class = "container">
         <div class = "title">
