--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
   <!-- footer -->
   <footer class="footer center">
     <div class="container">
-      <p class="text">Copyright &copy; Siddharth Library | All Rights Reserved (Designed and created by Gaurav Singh)</p>
+      <p class="text">Copyright &copy; Siddharth Library | All Rights Reserved (Designed and Created by Gaurav Singh)</p>
       <div class="footer-links">
         <a href="https://goo.gl/maps/KSLW8Zap44RfLq736" target="_blank"  class="center">
           <i class="fab fa-google"></i>
