--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="hero-div center container">
       <h1>Unlock the door to endless knowledge....</h1>
       <p class="animate__animated animate__fadeInUp animate__slow">At Siddharth Library, we motivate you to discover,
-        explore, and imagine your capabilites</p>
+        explore, and imagine your capabilities</p>
 
       <!-- <div class = "hero-btns animate__animated animate__fadeInUp animate__slow">
           <button type = "button" class = "btn-trans">learn more</button>
@@ -540,15 +540,15 @@
         <a href="https://jsdl.in/DT-99Q7W5WI15I" target="_blank" class="center">
           <i class="fa-solid fa-phone-volume"></i>
         </a>
-        <a href="#" class="center">
+        <a href="https://www.facebook.com/profile.php?id=100093799363028" class="center">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="center">
+        <!-- <a href="#" class="center">
           <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="#" class="center">
+        </a> -->
+        <!-- <a href="#" class="center">
           <i class="fab fa-twitter"></i>
-        </a>
+        </a> -->
       </div>
     </div>
   </footer>
